// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`boundaryMapFor over the golden traces > desk-minimal folds to the committed snapshot 1`] = `
{
  "activity": [
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000005",
      "tick": 1,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-00000000000c",
      "tick": 1,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-00000000000e",
      "tick": 1,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000013",
      "tick": 2,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-00000000001b",
      "tick": 2,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-00000000001d",
      "tick": 2,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000022",
      "tick": 3,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-000000000028",
      "tick": 3,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-00000000002a",
      "tick": 3,
    },
  ],
  "agent": {
    "bricks": [
      {
        "kindId": "starter/llm",
        "name": "Brain Brick",
        "slot": "brain",
      },
      {
        "kindId": "starter/sense",
        "name": "Eyes & Ears Brick",
        "slot": "perception",
      },
      {
        "kindId": "starter/actions",
        "name": "Hands & Wheels Brick",
        "slot": "mobility",
      },
      {
        "kindId": "starter/memory",
        "name": "Scrapbook Brick",
        "slot": "memory",
      },
    ],
    "id": "33333333-3333-4333-8333-333333333333",
    "name": "Deskbot",
  },
  "boundary": {
    "approval": {
      "mode": "off",
      "riskTiers": [],
    },
    "egress": {
      "hosts": [],
    },
    "guardrailIds": [],
    "safetyStack": [],
  },
  "human": {
    "approvals": 0,
  },
  "inside": {
    "counterparts": [],
    "world": {
      "id": "workshop/the-desk",
      "name": "The Front Desk",
      "view": "desk",
    },
  },
  "outside": [
    {
      "hosts": [],
      "id": "mock",
      "kind": "provider",
      "name": "mock",
      "sends": [],
    },
  ],
  "schemaVersion": 1,
}
`;

exports[`boundaryMapFor over the golden traces > geap-armour-offline folds to the committed snapshot 1`] = `
{
  "activity": [
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000005",
      "tick": 1,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-000000000012",
      "tick": 1,
    },
    {
      "edge": "guard-service:geap/model-armor",
      "eventId": "00000000-0000-4000-8000-000000000014",
      "outcome": "offline",
      "tick": 1,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000016",
      "tick": 1,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-00000000001b",
      "tick": 2,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-000000000022",
      "tick": 2,
    },
    {
      "edge": "guard-service:geap/model-armor",
      "eventId": "00000000-0000-4000-8000-000000000024",
      "outcome": "offline",
      "tick": 2,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000026",
      "tick": 2,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-00000000002b",
      "tick": 3,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-000000000034",
      "tick": 3,
    },
    {
      "edge": "guard-service:geap/model-armor",
      "eventId": "00000000-0000-4000-8000-000000000036",
      "outcome": "offline",
      "tick": 3,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000038",
      "tick": 3,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-00000000003d",
      "tick": 4,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-000000000046",
      "tick": 4,
    },
    {
      "edge": "guard-service:geap/model-armor",
      "eventId": "00000000-0000-4000-8000-000000000048",
      "outcome": "offline",
      "tick": 4,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-00000000004a",
      "tick": 4,
    },
  ],
  "agent": {
    "bricks": [
      {
        "kindId": "starter/llm",
        "name": "Brain Brick",
        "slot": "brain",
      },
      {
        "kindId": "starter/sense",
        "name": "Eyes & Ears Brick",
        "slot": "perception",
      },
      {
        "kindId": "starter/actions",
        "name": "Hands & Wheels Brick",
        "slot": "mobility",
      },
      {
        "kindId": "starter/memory",
        "name": "Scrapbook Brick",
        "slot": "memory",
      },
      {
        "kindId": "geap/armor",
        "name": "Armour Brick",
        "slot": "safety",
      },
    ],
    "id": "66666666-6666-4666-8666-666666666666",
    "name": "Armoured Tinybot",
  },
  "boundary": {
    "approval": {
      "mode": "off",
      "riskTiers": [],
    },
    "egress": {
      "hosts": [
        "modelarmor.*.rep.googleapis.com",
      ],
    },
    "guardrailIds": [
      "safety/step-budget",
      "geap/armor:decision",
    ],
    "safetyStack": [
      {
        "kindId": "geap/armor",
        "name": "Armour Brick",
      },
    ],
  },
  "human": {
    "approvals": 0,
  },
  "inside": {
    "counterparts": [],
    "world": {
      "id": "starter/playroom",
      "name": "The Playroom",
      "view": "grid",
    },
  },
  "outside": [
    {
      "hosts": [],
      "id": "mock",
      "kind": "provider",
      "name": "mock",
      "sends": [],
    },
    {
      "credential": "geap",
      "hosts": [
        "modelarmor.*.rep.googleapis.com",
      ],
      "id": "geap/model-armor",
      "kind": "guard-service",
      "name": "Model Armor",
      "sends": [
        "observation",
        "decision",
        "result",
        "credential-header",
      ],
    },
  ],
  "schemaVersion": 1,
}
`;

exports[`boundaryMapFor over the golden traces > say-hello folds to the committed snapshot 1`] = `
{
  "activity": [
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000005",
      "tick": 1,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-000000000011",
      "tick": 1,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000013",
      "tick": 1,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000018",
      "tick": 2,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-00000000001e",
      "tick": 2,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000020",
      "tick": 2,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000025",
      "tick": 3,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-00000000002d",
      "tick": 3,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-00000000002f",
      "tick": 3,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-000000000034",
      "tick": 4,
    },
    {
      "edge": "provider",
      "eventId": "00000000-0000-4000-8000-00000000003c",
      "tick": 4,
    },
    {
      "edge": "world",
      "eventId": "00000000-0000-4000-8000-00000000003e",
      "tick": 4,
    },
  ],
  "agent": {
    "bricks": [
      {
        "kindId": "starter/llm",
        "name": "Brain Brick",
        "slot": "brain",
      },
      {
        "kindId": "starter/sense",
        "name": "Eyes & Ears Brick",
        "slot": "perception",
      },
      {
        "kindId": "starter/actions",
        "name": "Hands & Wheels Brick",
        "slot": "mobility",
      },
      {
        "kindId": "starter/memory",
        "name": "Scrapbook Brick",
        "slot": "memory",
      },
    ],
    "id": "22222222-2222-4222-8222-222222222222",
    "name": "Testbot",
  },
  "boundary": {
    "approval": {
      "mode": "off",
      "riskTiers": [],
    },
    "egress": {
      "hosts": [],
    },
    "guardrailIds": [],
    "safetyStack": [],
  },
  "human": {
    "approvals": 0,
  },
  "inside": {
    "counterparts": [],
    "world": {
      "id": "starter/playroom",
      "name": "The Playroom",
      "view": "grid",
    },
  },
  "outside": [
    {
      "hosts": [],
      "id": "mock",
      "kind": "provider",
      "name": "mock",
      "sends": [],
    },
  ],
  "schemaVersion": 1,
}
`;
